# Fast-API-tutorial

./: pyproject.toml
app/: dependencies.py  main.py  test_main.py
app/internal/: admin.py
app/routers/: items.py  users.py
app/test/: main_b.py  test_main_b.py
stash/: main.py
